--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,8 @@ dependencies {
     compile project(':jokeandroidlibrary')
     compile project(path: ':backend', configuration: 'android-endpoints')
     compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.android.support:support-v4:23.2.1'
+    freeCompile 'com.google.android.gms:play-services-ads:8.4.0'
 }
 
 
