--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,14 +41,13 @@ dependencies {
     compile project(':jokejavalibrary')
     compile project(':jokeandroidlibrary')
     compile project(path: ':backend', configuration: 'android-endpoints')
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:support-v4:23.1.1'
     freeCompile 'com.google.android.gms:play-services-ads:8.4.0'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'org.mockito:mockito-core:1.10.19'
+    androidTestCompile "com.google.dexmaker:dexmaker:1.2"
+    androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
 }
-
-
-
-
-
 
 sourceCompatibility = 1.7
