--- a/jokeandroidlibrary/src/main/AndroidManifest.xml
+++ b/jokeandroidlibrary/src/main/AndroidManifest.xml
@@ -10,13 +10,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".JokerActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+            android:label="@string/app_name">
         </activity>
     </application>
 
